blockml/test/valid/03_mea_refs_dim/v6/v6d.dashboard
dashboard: v6d
title: 'sales'
reports:
- title: 'weekly'
  model: v6m
  select:
  - mf.mea1
  type: 'table'

