blockml/test/errors/12_chart/e288/d1.dashboard
dashboard: d1
title: 'sales'
reports:
- title: 'overview'
  select:
  - a.dim1
  model: m1
  type: 'line'
  data:
    x_field: a.dim1
    hide_columns: a.dim1  
    y_fields: 
    - a.dim1


